#                                                                              #
#                ===== PLEASE DO NOT DELETE THIS HEADER ====                   #
################################################################################
          1         2         3         4         5         6         7
01234567890123456789012345678901234567890123456789012345678901234567890123456789

EB-2011-03-23-0: Cleanup:     Removed authuser
                 Issue:       GE-3345
                 Review:      TBD

JG-2011-03-18-0: Cleanup:     adapt build default paths to univa environment
                 Isssue:      GE-3350

EB-2011-03-22-0: Bugfix:      o When supplementary group id cannot be set the 
                                queue is set into error state
                              o Setting of supplementary group id might fail on 
                                Mac OS X
                 Issues:      GE-3400 GE-3412
                 Review:      TBD

SH-2011-03-22-0: Enhancem.:   Added qsub -pty switch
                 Issue:       GE-3095
                 Review:      HP (GE-24)

DG-2011-03-22-1: Enhancem.:   Enabled core binding on Linux hosts per default.
                 Issue:       GE-3351
                 Review:      JG

DG-2011-03-22-0: Enhancem.:   Removed BDB RPC from command line installer.
                 Issue:       GE-3379
                 Review:      JG (GE-23)

EB-2011-03-21-0: Bugfix:      Perl JSV script does not allow comma in CMDNAME 
                              and CMDARGS 
                 Issues:      GE-3399
                 Review:      DG 

EB-2011-03-18-0: Bugfix:      ENABLE_RESCHEDULE_SLAVE=1 doesn't work anymore
                 Issues:      GE-3310
                 Review:      DG 

DG-2011-03-18-0: Cleanup:     aimk help and qconf -help output

SH-2011-03-17-0: Enhancem.:   Implemented the -suspend_remote parameter for qrsh
                 Isssue:      GE-3393
                 Review:      DG (GE-18)
