@@ -63,13 +63,13 @@ rsh:   $(RSH_OBJS)
 rsh.o: $(REMOTE_DIR)/rsh.c
 		$(CC) $(CFLAGS) $(REMOTE_CFLAGS) -c $(REMOTE_DIR)/rsh.c
 
-rshd:   $(RSHD_OBJS) $(RSHD_ADD_OBJS) $(RSHD_LIB_DEPENDS)
+rshd:   $(RSHD_OBJS) $(RSHD_ADD_OBJS) $(RSHD_LIB_DEPENDS) 
 		$(CC) -o $@ $(LFLAGS) $(RSHD_OBJS) $(RSHD_ADD_OBJS) $(RSHD_ADD_LIBS) $(LIBS) 
 
-rshd.o: $(REMOTE_DIR)/rshd.c
+rshd.o: $(REMOTE_DIR)/rshd.c $(RSHD_ADD_OBJS)
 		$(CC) $(CFLAGS) $(REMOTE_CFLAGS) -I$(SGE_DIR)/daemons/common -I$(SGE_DIR)/common -I$(SGE_DIR)/libs/uti -I$(SGE_DIR)/daemons/shepherd -c $(REMOTE_DIR)/rshd.c
 
-sgessh.o: $(REMOTE_DIR)/sgessh.c
+sgessh.o: $(REMOTE_DIR)/sgessh.c $(RSHD_ADD_OBJS)
 		$(CC) $(CFLAGS) $(REMOTE_CFLAGS) -I$(SGE_DIR)/daemons/common -I$(SGE_DIR)/common -I$(SGE_DIR)/libs/uti -I$(SGE_DIR)/daemons/shepherd -c $(REMOTE_DIR)/sgessh.c
 
 
