@@ -8,6 +8,10 @@
           1         2         3         4         5         6         7
 01234567890123456789012345678901234567890123456789012345678901234567890123456789
 
+EB-2011-03-23-1: Bugfix:      o Fixed broken build due to EB-2011-03-22-0
+                              o Fixed make dependency bug in 3rdparty/remote 
+                 Review:      TBD
+
 EB-2011-03-23-0: Cleanup:     Removed authuser
                  Issue:       GE-3345
                  Review:      TBD
